# StorageServer

./: .gitignore  .gitmodules  CMakeLists.txt  Changelist.md  Dockerfile  README.en.md  README.md  config-1.conf  config-2.conf  config-3.conf
.github/workflows/: build-compiler-master.yml  build-docker-tag.yml
lib/: CMakeLists.txt  StorageImp.cpp  StorageImp.h  StorageServer.cpp  StorageServer.h  StorageStateMachine.cpp  StorageStateMachine.h
prof/: CMakeLists.txt  main.cpp
scripts/: README.md  start.sh
src/: CMakeLists.txt  main.cpp
tars/: CMakeLists.txt  Storage.h  Storage.tars
test/: CMakeLists.txt  Json.tars  main.cpp
yaml/: values.yaml
